--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,15 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: #e9e9e9 !important;
+  font-size: 15px !important;
+  font-family: 'Roboto', sans-serif !important;
+  scroll-behavior: smooth !important;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
@@ -36,3 +20,323 @@
     transform: rotate(360deg);
   }
 }
+.form-content{
+  width: 30%;
+  height: 100%;
+}
+.form-content-item {
+  overflow-y: scroll ;
+  max-height: 80vh;
+  margin-top: 16px;
+  padding: 20px;
+  color: #00ac99 !important;
+  background-color: #fafafa;
+  border: 1px solid #e9e9e9;
+  border-radius: 5px;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2), 0 0 6px 0 rgba(0, 0, 0, 0.19);
+}
+
+.form-content-item .form-title{
+  padding: 10px;
+  font-size: 25px;
+  color: #00ac99;
+}
+.form-content-item .form-title i{
+ margin-right: 20px;
+
+}
+.form-content-item .form-title span{
+  font-weight: bold;
+ }
+ 
+
+.steps-content h1 {
+  text-align: center;
+}
+.steps-action {
+  margin-top: 24px;
+}
+.main-content{
+  display: flex;
+  justify-content: flex-start;
+}
+.steps{
+  margin-right: 30px;
+  width: 20% ;
+  position: relative;
+  padding: 10px;
+  background-color:white;
+  border-right: 2px solid #e9e9e9;
+}
+
+
+.languages-button{
+   display: flex;
+  align-items: center;
+   justify-content: space-between;
+   background-color: white;
+   border-bottom: 2px solid #e9e9e9;
+   
+}
+.languages-button .logo {
+  width: 60px;
+  height: 60px;
+  margin-left: 50px;
+}
+.languages-button button{
+  padding: 0;
+  margin:2px;
+}
+.languages-button img{
+  width: 40px;
+  height: 30px;
+  object-fit: cover;
+  
+}
+.content-steps{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
+
+.content-steps button {
+  background-color: rgb(227, 227, 227);
+}
+.content-steps button:hover {
+  background-color: rgb(227, 227, 227);
+}
+
+.button-export{
+  background-color: #00ac99 !important;
+}
+.steps .form-orther-popup{
+  position: absolute;
+  width: 300px;
+  background-color:white;
+  border-radius: 5px;
+  left : 95%;
+  top: 5%;
+  z-index: 100;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2), 0 0 6px 0 rgba(0, 0, 0, 0.19);
+}
+.steps .form-orther-popup .label-form-orther{
+  text-align: center;
+  padding: 20px;
+  font-size: 18px;
+  font-weight: bold;
+}
+.steps .form-orther-popup ul{
+padding: 0;
+margin: 0;
+overflow-y: scroll;
+max-height: 300px;
+}
+.steps .form-orther-popup ul li{
+ list-style: none;
+ padding: 10px;
+ cursor: pointer;
+}
+.steps .form-orther-popup ul li:hover{
+    background-color:rgb(206, 204, 204) ;
+ }
+ .steps .form-orther-popup ul li i{
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  width: 45px;
+  background-color: #00ac99;
+  border-radius: 3px;
+ }
+ .steps .form-orther-popup ul li .item{
+  text-align: center;
+  display: inline-block;
+  margin-left: 5%;
+ }
+
+.steps .form-orther-popup ul li .item h5{
+margin: 0;
+}
+ .steps .form-orther-popup ul li .item span{
+    font-size: 15px;
+    font-weight: bold;
+ }
+
+ .steps .steps-delete {
+   text-align: right;
+ }
+ .steps .steps-delete i{
+    color: white;
+    font-size: 20px;
+    background-color: red;
+    padding: 10px;
+    border: 1px solid;
+    cursor: pointer;
+    border-radius: 5px;
+}
+.steps .steps-delete-opacity{
+  display: none;
+}
+.steps .steps-delete-opacity i{
+  color: white;
+  font-size: 20px;
+  background-color: red;
+  padding: 10px;
+  border: 1px solid;
+  border-radius: 5px;
+}
+/* .Steps{
+  height: 50%;
+} */
+
+/* cv content */
+.cv-content{
+  margin-left: 2%;
+  margin-right:  2%;
+  width: 60%;
+  height: auto;
+  background-color: #fafafa;
+  border: 1px solid #dddddd;
+  border-radius: 5px;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2), 0 0 6px 0 rgba(0, 0, 0, 0.19);
+}
+.cv-content img{
+  position: absolute;
+  left:10%;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 112px;
+  border:15px solid white;
+ 
+}
+.CV-header{
+  position: relative;
+}
+.CV-header img{
+  position: absolute;
+  top: 30%;
+  left: 12%;
+  display: flex;
+  flex-direction: column;
+}
+.CV-header .CV-main h1{
+  font-weight: 100;
+}
+.CV-details-content {
+ position: relative;
+ /* max-height: 90vh; */
+    /* overflow-y: scroll; */
+}
+.CV-header .CV-main{
+  margin-top: 70px;
+}
+
+.CV-details-content .CV-main ul li {
+  list-style: none;
+  padding-top: 15px;
+  padding-left: 0px !important;
+  text-align: left;
+}
+.contact-details ul li span {
+  margin-left:  10px;
+}
+
+.cv-content .CV-main ul li i{
+  padding-top: 10px;
+  text-align: center;
+  font-size: 22px;
+  width: 40px;
+  height: 40px;
+  background-color: #00ac99;
+  border-radius: 20px 0px 20px 0px;
+  color: white;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.2), 0 0 6px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+.CV-header{
+  width: 100%;
+  height: 200px;
+  border-radius: 5px;
+  background: url(./assets/image/3.png);
+}
+.center{
+  text-align: center;
+  margin-top: 20px;
+}
+.skills-details .skills-details-steps{
+  min-width: 70%;
+  height: 5px;
+  background-color: #00ac99;
+  border-radius: 2px;
+  box-shadow: 0 0 0 0 rgb(0 0 0 / 20%), 0 0 6px 0 rgb(0 0 0 / 19%);
+}
+.skills-details .skills-details-items{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.skills-details .skills-details-items span{
+  display: inline;
+}
+
+
+.CV-main{
+  display: flex;
+}
+.CV-main .CV-main-left{
+  width: 50%;
+  text-align: center;
+}
+.CV-main .CV-main-left .info-user {
+  margin-top: 80px;
+  margin-bottom: 20px;
+}
+.CV-main .CV-main-right{
+  width: 50%;
+  margin-left: 20px;
+}
+.CV-main .CV-main-right .CV-main-right-item .label{
+  margin-top: 20px;
+  width: 80%;
+  margin-left: 20px;
+  background-color: #00ac99;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  border-radius: 30px 0 30px 0;
+  box-shadow: 0 0 0 0 rgb(0 0 0 / 20%), 0 0 6px 0 rgb(0 0 0 / 19%);
+
+}
+.CV-main .CV-main-right .CV-main-right-item .label span{
+  font-weight: bold;
+  font-size: 18px;
+}
+.CV-main .CV-main-right .CV-main-right-item .label i{
+  margin-left: 5px;
+  float: left;
+  font-size: 20px;
+}
+.CV-main .CV-main-right .CV-main-right-item .boder {
+  margin-top: 10px;
+  border-left: 2px solid #00ac99;
+ 
+}
+.CV-main .CV-main-right .CV-main-right-item .info {
+ 
+  margin-left: 15px;
+}
+.CV-main .CV-main-right .CV-main-right-item .boder .info h4:nth-child(1){
+  padding-top: 10px;
+  color: #00ac99;
+  font-weight: bold;
+}
+.CV-main .CV-main-right .CV-main-right-item .boder .info h4:nth-child(2){
+  color: #3f3f3f;
+  font-weight: bold;
+}
+.CV-main .CV-main-right .CV-main-right-item  h5{
+    margin-left: 10px;
+}
+
+
